--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "locomotive-scroll": "^5.0.0-beta.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-router-dom": "^6.25.1",
+    "react-spring": "^9.7.3"
   },
   "devDependencies": {
     "@types/locomotive-scroll": "^4.1.3",
