--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^11.3.8",
     "gsap": "^3.12.5",
     "locomotive-scroll": "^5.0.0-beta.13",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.414.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "@types/locomotive-scroll": "^4.1.3",
+    "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
