--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@types/gsap": "^3.0.0",
     "framer-motion": "^11.3.8",
     "gsap": "^3.12.5",
+    "is-touch-device": "^1.0.1",
     "locomotive-scroll": "^5.0.0-beta.13",
     "lodash": "^4.17.21",
     "lucide-react": "^0.414.0",
     "react": "^18.3.1",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-spring": "^9.7.3"
