--- a/package.json
+++ b/package.json
@@ -10,21 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@types/gsap": "^3.0.0",
+    "@studio-freight/react-lenis": "^0.0.47",
     "framer-motion": "^11.3.8",
-    "gsap": "^3.12.5",
     "is-touch-device": "^1.0.1",
-    "locomotive-scroll": "^5.0.0-beta.13",
     "lodash": "^4.17.21",
     "lucide-react": "^0.414.0",
     "react": "^18.3.1",
-    "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.25.1",
     "react-spring": "^9.7.3"
   },
   "devDependencies": {
-    "@types/locomotive-scroll": "^4.1.3",
     "@types/lodash": "^4.17.7",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
